<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bachelortestgrounds.WalkActivity" >

    <Button
        android:id="@+id/startwalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/startwalk" />

    <Button
        android:id="@+id/settingsbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startwalk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/settings" />

    <Button
        android:id="@+id/statsbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/stats" />

    <TextView
        android:id="@+id/progressmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calcdistance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:textSize="15sp"
        android:text="" />

</RelativeLayout>